2005-08-21  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpselectionoptions.c (gimp_selection_options_gui):
	the "Antialias" toggle got lost, resurrect it.

2005-08-21  Jens Seidel  <jseidel@cvs.gnome.org>

	* app/paint/gimpconvolve.c
	* app/tools/gimpiscissorstool.c
	* app/vectors/gimpvectors-import.c
	* libgimp/gimp.c
	* m4macros/gimp-2.0.m4
	* m4macros/gimpprint.m4
	* plug-ins/common/wind.c
	* plug-ins/fits/fitsrw.c
	* plug-ins/metadata/xmp-model.c
	* plug-ins/uri/uri-backend-wget.c: Fixed the typo
	"occured" (also in all effected PO files to avoid fuzzyness)

2005-08-21  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimppencil.h
	* app/paint/gimppenciloptions.[ch]
	* app/widgets/widgets-types.h
	* app/widgets/gimptooldialog.h: don't simply typedef object
	instance structs which add no members as their parent instance
	structs. Give them their own instance structs.  Fixes gtk-doc
	confusion.

2005-08-21  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannel.h: removed HALF_WAY define, it's
	BOUNDARY_HALF_WAY now.

2005-08-20  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_proc_changed):
	when looking for the file extension, only look at the part after
	the last directory separator.

2005-08-20  Michael Natterer  <mitch@gimp.org>

	* app/base/boundary.[ch]: even more cleanup, replaced informal
	comments by API docs.

2005-08-20  Michael Natterer  <mitch@gimp.org>

	* app/base/boundary.[ch]: renamed puclic functions, defines and
	enums to live in a proper "boundary" namespace. Cleaned up and
	simplified internal code even more.

	* app/core/gimpchannel.c
	* app/core/gimpdrawable-stroke.c
	* app/core/gimplayer-floating-sel.c
	* app/paint/gimppaintcore-stroke.c
	* app/tools/gimpeditselectiontool.c
	* app/tools/gimpfuzzyselecttool.c
	* app/tools/gimppainttool.c: changed accordingly.

2005-08-20  Michael Natterer  <mitch@gimp.org>

	* app/base/boundary.c: rename local "ns" variables to "num_segs"