@@ -1,3 +1,7 @@
+2005-08-22  Sven Neumann  <sven@gimp.org>
+
+	* tools/test-clipboard.c: added --version command-line option.
+
 2005-08-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpselectionoptions.c (gimp_selection_options_gui):
